<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productCardHeader"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="5dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productBarcode"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:paddingLeft="10dp"
        android:background="@color/colorAccent"/>
    <TextView
        android:id="@+id/productBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:paddingLeft="10dp"
        android:background="@color/colorAccent"/>
    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productIngredients"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:paddingLeft="10dp"
        android:background="@color/colorAccent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/productIngredientsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent">
        </LinearLayout>
    </ScrollView>

</LinearLayout>